# human-following-robot

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
data/: PI_tuning.py  depth_plotter.py  extract_n_plot.py  plot_PI_cmd.py  record.sh  twist_filterer.py  video_stitcher.py  visualizer.py
include/aruco-course-correction/: daksh-aruco-corrector.ino  dual-manual-autonomous.ino
launch/: aruco.launch
mpc-rl-lab/envs/: mpc_param_env.py  mpc_param_env_cfg.py
mpc-rl-lab/robots/: car_model_config.py
scripts/: aruco_corners_finder.py  aruco_pose_estimator.py  emergency_stop.py  library.py  train.py  trajectory_planner_test.py  trajectory_planning_controller.py  trajectory_plotter.py  visual_error_controller.py
src/: aruco-corners-pub.py  daksh-aruco-corrector.ino  leo-og.ino  updated-twist-pub.py
src/human_following_robot/: library.py
