<?xml version="1.0"?>
<package format="2">
  <name>human-following-robot</name>
  <version>0.0.0</version>
  <description>ArUco marker detection and visual servoing for RC car course correction</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Use <depend> instead of <exec_depend> for packages in CATKIN_DEPENDS -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <!-- Python OpenCV (system dependency, use exec_depend) -->
  <exec_depend>python3-opencv</exec_depend>
  <build_depend>message_generation</build_depend>
<exec_depend>message_runtime</exec_depend>

  <export>
  </export>

</package>


















